--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,9 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+./node_modules
 jspm_packages/
+node_modules
 
 # TypeScript v1 declaration files
 typings/
@@ -89,3 +90,4 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+node_modules
