--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http-server": "^0.11.1"
+    "csvtojson": "^2.0.10",
+    "http-server": "^0.11.1",
+    "write-json-file": "^4.2.0"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
