--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "write-json-file": "^4.2.0"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "@angular/cli": "^8.3.4",
+    "eslint": "^6.3.0",
+    "eslint-plugin-react": "^7.14.3",
+    "jest": "^24.9.0",
+    "prettier": "^1.18.2",
+    "xxxxx": "^1.0.3"
   }
 }
